--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,15 @@ textarea:not(:focus) ~ label::after {
   text-decoration: underline;
 } */
 
+.message > a:hover{
+  text-decoration: underline;
+}
+
+.message > a.usertag:hover{
+  text-decoration: none;
+  opacity: 0.8;
+}
+
 .message img{
   overflow: hidden;
   margin: 0;
