--- a/src/index.css
+++ b/src/index.css
@@ -108,13 +108,24 @@ textarea:not(:focus) ~ label::after {
   text-decoration: underline;
 } */
 
+.message > a{
+  text-decoration: none;
+  opacity: 0.8;
+}
+
 .message > a:hover{
   text-decoration: underline;
+  opacity: 1;
+}
+
+.message > a.usertag{
+  text-decoration: none;
+  opacity: 0.8;
 }
 
 .message > a.usertag:hover{
   text-decoration: none;
-  opacity: 0.8;
+  opacity: 1;
 }
 
 .message img{
